--- a/app/src/main/res/layout/fragment_places.xml
+++ b/app/src/main/res/layout/fragment_places.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 13.03.20 15:22
+  ~ Last modified 13.03.20 20:45
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -26,7 +26,7 @@
 		app:tabIndicator="@color/transparent"
 		app:tabMode="scrollable"
 		app:tabRippleColor="@color/transparent"
-		app:tabSelectedTextColor="@color/white_85"
+		app:tabSelectedTextColor="@color/white"
 		app:tabTextAppearance="@style/tab_text_36sp"
 
 		app:layout_constraintTop_toTopOf="parent"
