--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 13.03.20 18:27
+  ~ Last modified 13.03.20 20:45
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -173,7 +173,7 @@
 		app:inactiveTrackColor="@color/lolite_25"
 		app:haloColor="?colorSecondary"
 
-		app:thumbColor="@color/white_85"
+		app:thumbColor="@color/white"
 		app:thumbRadius="14dp"
 
 		android:alpha="0"
