--- a/app/src/main/res/drawable/progress_drawable.xml
+++ b/app/src/main/res/drawable/progress_drawable.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 26.01.20 18:52
+  ~ Last modified 13.03.20 20:44
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -15,6 +15,6 @@
 	android:thickness="4dp"
 	android:useLevel="true">
 
-	<solid android:color="@color/white_85" />
+	<solid android:color="@color/white" />
 
 </shape>
