trying to create own loading view based on loading gif

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 13.03.20 20:49
+  ~ Last modified 20.03.20 16:57
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -66,5 +66,10 @@
 	<color name="material_orange_a700">#FF6D00</color>
 	<color name="material_blue_400">#42A5F5</color>
 	<color name="material_blue_a700">#2962FF</color>
+
+	<color name="my_loading_background">#191a26</color>
+	<color name="my_loading_shape1">#CC40FF01</color>
+	<color name="my_loading_shape2">#CC0016FF</color>
+	<color name="my_loading_shape3">#CCFE0000</color>
 
 </resources>
