--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 13.03.20 19:35
+  ~ Last modified 22.03.20 15:15
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -13,5 +13,8 @@
 	<declare-styleable name="CircleImageView">
 		<attr name="civ_border_overlay" format="boolean" />
 		<attr name="civ_circle_background_color" format="color" />
+	</declare-styleable>
+	<declare-styleable name="LoadingView">
+		<attr name="container_background_color" format="color" />
 	</declare-styleable>
 </resources>
