--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 22.03.20 16:22
+  ~ Last modified 23.03.20 16:25
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -111,6 +111,7 @@
 			android:hint="@string/fragment_chat_ed_hint"
 			android:padding="@dimen/general_margin_16"
 
+			android:textColor="@color/white"
 			android:textColorHint="@color/white_50"
 			android:textSize="18sp"
 			style="@style/regular_text"
